RESOLVED FIXED259091
REGRESSION(257749@main): Copying table in Confluence on Safari doesn't copy header rows
https://bugs.webkit.org/show_bug.cgi?id=259091
Summary REGRESSION(257749@main): Copying table in Confluence on Safari doesn't copy h...
Ryosuke Niwa
Reported 2023-07-10 18:42:00 PDT
After 257749@main, user can't copy the header table headers on Confluence.
Attachments
Ryosuke Niwa
Comment 1 2023-07-10 18:42:12 PDT
Ryosuke Niwa
Comment 2 2023-07-10 18:47:58 PDT
EWS
Comment 3 2023-07-10 23:26:42 PDT
Committed 265939@main (6f132509a670): <https://commits.webkit.org/265939@main> Reviewed commits have been landed. Closing PR #15721 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.