Cherry-pick 6f132509a670. rdar://problem/109779229

REGRESSION(257749@main): Copying table in Confluence on Safari doesn't copy header rows
    https://bugs.webkit.org/show_bug.cgi?id=259091

    Reviewed by Wenson Hsieh.

    Add a Confluence specific quirk to copy `-webkit-user-select: none` contents.

    * LayoutTests/editing/pasteboard/copy-content-with-user-select-none-quirks-expected.txt: Added.
    * LayoutTests/editing/pasteboard/copy-content-with-user-select-none-quirks.html: Added.
    * Source/WebCore/editing/Editor.cpp:
    (WebCore::Editor::selectedText const):
    (WebCore::Editor::selectedTextForDataTransfer const):
    * Source/WebCore/editing/cocoa/HTMLConverter.mm:
    (HTMLConverter::HTMLConverter):
    (HTMLConverter::_enterElement):
    (HTMLConverter::_processText):
    * Source/WebCore/editing/markup.cpp:
    (WebCore::StyledMarkupAccumulator::StyledMarkupAccumulator):
    * Source/WebCore/html/HTMLMetaElement.cpp:
    (WebCore::HTMLMetaElement::process):
    * Source/WebCore/page/DOMSelection.cpp:
    (WebCore::DOMSelection::toString const):
    * Source/WebCore/page/Quirks.h:
    (WebCore::Quirks::needsToCopyUserSelectNoneQuirk const):
    (WebCore::Quirks::setNeedsToCopyUserSelectNoneQuirk):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/CopyRTF.mm:
    (TEST):

    Canonical link: https://commits.webkit.org/265939@main

Identifier: 265870.100@safari-7616-branch