Tools/TestWebKitAPI/Tests/WebKitCocoa/CopyRTF.mm
@@ -172,4 +172,14 @@ TEST(CopyRTF, StripsUserSelectNone)
     EXPECT_WK_STREQ([attributedString string].UTF8String, "hello WebKit bar");
 }
 
+TEST(CopyRTF, StripsUserSelectNoneQuirks)
+{
+    auto attributedString = copyAttributedStringFromHTML(@"<meta name='confluence-request-time' content='1689029750234'>"
+        "hello <span style='-webkit-user-select: none; user-select: none;'>world "
+        "<span style='-webkit-user-select: initial; user-select: initial;'>WebKit </span></span>"
+        "<div style='-webkit-user-select: none; user-select: none;'>some<br>user-select-none<br>content</div><span inert>foo </span>bar", false);
+
+    EXPECT_WK_STREQ([attributedString string].UTF8String, "hello world WebKit\nsome\nuser-select-none\ncontent\nfoo bar");
+}
+
 #endif // PLATFORM(COCOA)
